<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center"
    >
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >
            <TextView 
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/today"/>
		</LinearLayout>
		<LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:orientation="vertical"
            >
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:text="@string/running_step"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="1dp"
			    android:layout_height="30dp"
			    android:layout_marginTop="15dp"
			    android:background="@color/black">
			    
			</LinearLayout>
			<LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:orientation="vertical"
            >
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:text="@string/walking_step"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="1dp"
			    android:layout_height="30dp"
			    android:layout_marginTop="15dp"
			    android:background="@color/black">
			    
			</LinearLayout>
			<LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:orientation="vertical"
            >
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:text="@string/gongli"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="1dp"
			    android:layout_height="30dp"
			    android:layout_marginTop="15dp"
			    android:background="@color/black">
			    
			</LinearLayout>
			<LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:orientation="vertical"
            >
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:text="@string/calorie"/>
			</LinearLayout>
		</LinearLayout>
</LinearLayout>