<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/setting">
    <include layout="@layout/title_sports"/>
    <LinearLayout 
        	android:id="@+id/user_name_linear"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:clickable="true"
	    	android:layout_marginTop="10dp"
	    	>
	    	<LinearLayout 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_marginLeft="100dp"
		    	>
			    <ImageView 
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:background="@drawable/name_setting"/>
		        <EditText 
		            android:layout_width="150dp"
			    	android:layout_height="wrap_content"
			    	android:layout_marginLeft="10dp"
			    	android:textSize="20sp"
			    	android:singleLine="true"
			    	android:gravity="center"
			    	android:textColor="@color/cycle_color"
			    	android:id="@+id/user_name"
			    	android:background="@drawable/setting_edit_bg"/>
	        </LinearLayout>
    </LinearLayout>
	    	
    <View 
	    android:layout_width="match_parent"
	    android:layout_marginTop="10dp"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:id="@+id/setting_male_linear"
	    android:layout_width="match_parent"
    	android:layout_height="30dp"
    	android:focusable="true"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical">
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/setting_male"
    		android:gravity="left"
    		android:layout_marginLeft="100dp"
	        />
	    <TextView 
	        android:id="@+id/setting_male"
	        android:layout_width="80dp"
	        android:textColor="@color/cycle_color"
    		android:layout_height="wrap_content"
    		android:gravity="center"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:id="@+id/setting_height_linear"
	    android:layout_width="match_parent"
    	android:layout_height="30dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	>
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/setting_height"
    		android:gravity="left"
    		android:layout_marginLeft="100dp"
	        />
	    <EditText 
	        android:id="@+id/setting_height"
	        android:layout_width="80dp"
    		android:layout_height="wrap_content"
    		android:gravity="center"
    		android:textColor="@color/cycle_color"
    		android:inputType="number"
    		android:singleLine="true"
	        android:background="@drawable/setting_edit_bg"/>
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="cm"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:id="@+id/setting_weight_linear"
	    android:layout_width="match_parent"
    	android:layout_height="30dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	>
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/setting_weight"
    		android:gravity="left"
    		android:layout_marginLeft="100dp"
    		
	        />
	    <EditText 
	        android:id="@+id/setting_weight"
	        android:layout_width="80dp"
    		android:layout_height="wrap_content"
    		android:inputType="number"
    		android:gravity="center"
    		android:singleLine="true"
    		android:textColor="@color/cycle_color"
	        android:background="@drawable/setting_edit_bg"/>
	    <TextView 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="kg"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="10dp"
	    	android:gravity="center">
	    <LinearLayout 
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:background="@drawable/sports_setting"
	    	android:padding="10dp"
	    	android:layout_marginRight="30dp"
	    	android:gravity="center">
		    <LinearLayout 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:gravity="center">
			    <TextView 
			        android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textSize="14sp"
		    		android:text="@string/sports_target"
		    		android:layout_gravity="center_horizontal"
			        />
			    <LinearLayout 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    	android:gravity="center">
			        <EditText 
				        android:layout_width="70dp"
			    		android:layout_height="wrap_content"
			    		android:textSize="22sp"
			    		android:textColor="@color/cycle_color"
			    		android:id="@+id/sport_target"
			    		android:inputType="number"
			    		android:singleLine="true"
			    		android:gravity="center"
			        	android:background="@drawable/setting_edit_bg"/>
			        <TextView 
				        android:layout_width="wrap_content"
			    		android:layout_height="wrap_content"
			    		android:textSize="10sp"
			    		android:textColor="@color/cycle_color"
			    		android:text="@string/step"
			        />
		    </LinearLayout>
			    <TextView 
			        android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:textSize="10sp"
		    		android:text="@string/sports_suggest"
			        />
			</LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@drawable/sleep_setting"
    	android:layout_marginLeft="10dp"
    	android:gravity="center">
	    <LinearLayout 
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:gravity="center">
		    <TextView 
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textSize="14sp"
	    		android:text="@string/sleep_target"
		        />
		    <LinearLayout 
			    android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    	android:gravity="center">
			        <EditText 
				        android:layout_width="40dp"
			    		android:layout_height="wrap_content"
			    		android:textSize="22sp"
			    		android:textColor="@color/sleep_color"
			    		android:id="@+id/sleep_target"
			    		android:inputType="number"
			    		android:singleLine="true"
			    		android:gravity="center"
			        	android:background="@drawable/setting_edit_bg"/>
			        <TextView 
				        android:layout_width="wrap_content"
			    		android:layout_height="wrap_content"
			    		android:textSize="12sp"
			    		android:textColor="@color/sleep_color"
			    		android:text="@string/hour"
			        />
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:textSize="10sp"
	    		android:text="@string/sleep_suggest"
		        />
		</LinearLayout>
	</LinearLayout>
	</LinearLayout>
	
	<Button 
	    android:layout_width="180dp"
    	android:layout_height="50dp"
    	android:layout_marginTop="50dp"
    	android:textColor="@color/white"
    	android:text="@string/setting_save"
    	android:background="@drawable/about_button_bg"
    	android:layout_gravity="center"
    	android:id="@+id/save_btn"
    	
    	/>
</LinearLayout>