<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title_sports"/>
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:focusable="true"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/device_power"
    		android:gravity="left"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="20dp"
	        />
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:id="@+id/device_power"
    		android:gravity="right"
    		android:textColor="@color/cycle_color"
    		android:layout_marginRight="20dp"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/sync_time"
    		android:gravity="left"
    		android:layout_marginLeft="30dp"
    		android:layout_marginRight="20dp"
	        />
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:id="@+id/sync_time"
    		android:gravity="right"
    		android:textColor="@color/cycle_color"
    		android:layout_marginRight="20dp"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="left"
    		android:layout_marginLeft="30dp"
    		android:layout_marginRight="20dp"
    		android:text="@string/device_version"
	        />
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="right"
    		android:textColor="@color/cycle_color"
    		android:layout_marginRight="20dp"
    		android:id="@+id/device_version"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="left"
    		android:layout_marginLeft="30dp"
    		android:layout_marginRight="20dp"
    		android:text="@string/app_version"
	        />
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="right"
    		android:textColor="@color/cycle_color"
    		android:layout_marginRight="20dp"
    		android:id="@+id/app_version"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:clickable="true"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="@color/white">
	    <TextView 
	        android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:gravity="left"
    		android:layout_marginLeft="30dp"
    		android:layout_marginRight="20dp"
    		android:text="@string/phone_status"
	        />
	    <Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:gravity="right"
    		android:layout_marginRight="20dp"
    		android:id="@+id/phone_status"
    		android:background="@drawable/call_off"
	        />
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dcdbe3"
	    />
	<Button 
	    android:layout_width="280dp"
    	android:layout_height="50dp"
    	android:layout_marginTop="60dp"
    	android:textColor="@color/white"
    	android:text="@string/rebind_btn"
    	android:background="@drawable/about_button_bg"
    	android:layout_gravity="center"
    	android:id="@+id/rebind_btn"/>
</LinearLayout>