<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center"
    >
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            >
            <TextView 
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="@color/sleep_color"
            	android:text="@string/today"
            	android:id="@+id/sleeptime_tip"/>
		</LinearLayout>
		<LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="30dp"
            	android:paddingTop="10dp"
            	android:paddingRight="30dp"
            	android:paddingBottom="30dp"
	            android:orientation="vertical"
	            android:gravity="center">
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:textColor="@color/black"
	            	android:text="@string/deep_sleep"/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:textColor="@color/sleep_color"
	            	android:id="@+id/deep_sleep"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="0.5dp"
			    android:layout_height="15dp"
			    android:layout_marginTop="25dp"
			    android:background="@color/black">
			    
			</LinearLayout>
			<LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="30dp"
            	android:paddingTop="10dp"
            	android:paddingRight="30dp"
            	android:paddingBottom="30dp"
	            android:orientation="vertical"
	            android:gravity="center">
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:textColor="@color/black"
	            	android:text="@string/light_sleep"/>
            	<TextView 
	                android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:paddingTop="10dp"
	            	android:textColor="@color/sleep_color"
	            	android:id="@+id/light_sleep"/>
			</LinearLayout>
		</LinearLayout>
</LinearLayout>